# onramp-service

./: .gitignore  LICENSE  README.md  docker-compose.yml
debezium/connectors/: executor-order-tasks.json  onramp-orders.json
debezium/init-db/: 01-create-onramp.sql  02-create-executor.sql  03-create-webhook.sql
executor/: .env.example  Dockerfile  README.md  pyproject.toml
executor/alembic/: README  env.py
executor/alembic/versions/: 001_create_order_processing_steps.py  002_create_order_tasks.py
executor/app/: __init__.py  config.py  db.py  main.py
executor/app/invoker/: __init__.py  payment_provider.py  processor.py  selector.py
executor/app/listeners/: __init__.py  orders_cdc.py
executor/app/models/: __init__.py  order_processing_step.py  order_task.py
executor/tests/: __init__.py  run_alembic.py
executor/tests/integration/: __init__.py  conftest.py  test_invoker.py  test_orders_cdc.py
executor/tests/unit/: test_orders_cdc.py  test_payment_provider.py
libs/authorization/: README.md  pyproject.toml
libs/authorization/authorization/: __init__.py  config.py  jwt.py
libs/backoff/: README.md  pyproject.toml
libs/backoff/backoff/: __init__.py  retry.py
libs/hash/: README.md  pyproject.toml
libs/hash/hash_lib/: __init__.py  idempotency.py  jwt.py  signature.py
libs/hash/tests/: test_idempotency.py  test_jwt.py  test_signature.py
libs/step_processor/: README.md  pyproject.toml
libs/step_processor/step_processor/: __init__.py  apply.py  loop.py
onramp/: .env.example  Dockerfile  README.md  pyproject.toml
onramp/alembic/: env.py
onramp/alembic/versions/: 001_create_orders_table.py
onramp/app/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
onramp/app/aml_checker/: __init__.py  checker.py
onramp/app/listeners/: __init__.py  order_tasks_cdc.py
onramp/app/models/: __init__.py  order.py
onramp/app/quotes/: __init__.py  fee_provider.py  rate_provider.py  signing.py
onramp/app/routers/: orders.py  quotes.py
onramp/tests/: __init__.py  conftest.py  test_main.py  test_orders.py  test_quotes.py  test_signing.py
onramp/tests/integration/: __init__.py  conftest.py  test_orders_integration.py
onramp/tests/unit/: __init__.py  conftest.py  test_aml_checker.py  test_main.py  test_order_tasks_cdc.py  test_orders.py  test_quotes.py  test_signing.py
scripts/: onramp-demo.sh
webhook/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
webhook/alembic/: README  env.py
webhook/alembic/versions/: 001_create_tables.py  001_create_webhooks_table.py
webhook/app/: __init__.py  auth.py  config.py  db.py  main.py  schemas.py
webhook/app/listeners/: __init__.py  orders_cdc.py
webhook/app/models/: __init__.py  notification.py  notification_processing_step.py  webhook.py
webhook/app/routers/: __init__.py  webhooks.py
webhook/app/sender/: __init__.py  backoff.py  processor.py  selector.py  sending.py
webhook/tests/: __init__.py  conftest.py
webhook/tests/integration/: conftest.py  test_orders_cdc_listener.py  test_sender.py
webhook/tests/unit/: conftest.py  test_orders_cdc.py  test_webhooks.py
