[tool.poetry]
name = "executor"
version = "0.1.0"
description = "Service that executes orders."
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
aiokafka = "^0.11.0"
alembic = "^1.14"
fastapi = "^0.116"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic-settings = "^2.6"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
testcontainers = { extras = ["postgres"], version = "^4.9" }

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: unit tests",
    "integration: integration tests (Testcontainers PostgreSQL)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
