[tool.poetry]
name = "onramp"
version = "0.1.0"
description = "FastAPI stub service with Poetry and pydantic-settings"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic-settings = "^2.6"
pyjwt = "^2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
