[tool.poetry]
name = "onramp"
version = "0.1.0"
description = "Quotes and orders API (JWT, PostgreSQL, Alembic)."
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.14"
authorization = { path = "../libs/authorization", develop = true }
alembic = "^1.14"
fastapi = "^0.116"
uvicorn = { extras = ["standard"], version = "^0.32" }
pydantic-settings = "^2.6"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.28"
testcontainers = { extras = ["postgres"], version = "^4.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: unit tests (SQLite, no external services)",
    "integration: integration tests (Testcontainers PostgreSQL)",
]
