[tool.poetry]
name = "hash"
version = "0.1.0"
description = "Shared hash helpers (idempotency key) and JWT auth."
authors = []
readme = "README.md"
packages = [{ include = "hash_lib" }]

[tool.poetry.dependencies]
python = "^3.14"
pyjwt = "^2.10"
pydantic-settings = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
